--- a/algebruh/algebra.tex
+++ b/algebruh/algebra.tex
@@ -60,6 +60,8 @@
 \DeclareMathOperator{\CC}{\mathbb{C}}
 \DeclareMathOperator{\RR}{\mathbb{R}}
 \DeclareMathOperator{\NN}{\mathbb{N}}
+\DeclareMathOperator{\codim}{codim}
+\DeclareMathOperator{\rank}{rank}
 
 \begin{document}
 
@@ -1188,15 +1190,382 @@ $z^n=e^{i\varphi n}=\cos(\varphi n)+i\sin(\varphi n)$. Распишем $c=s(\co
 
 \subsection{Определение векторного пространства. Линейная зависимость. Существование базиса}
 
+Для начала введём понятия, которых нет в билетах, а также некоторые их свойства, которые пригодятся для определения объектив в этом билете.
+
+\begin{defn}
+    Пусть $R$ - кольцо. Тогда \hypertarget{n42}{\textcolor{red}{\textit{левый $R$-модуль}}} - это абелева группа $M$ вместе с операцией $R\times M\rightarrow M, (r, m)\mapsto r\cdot m$, удовлетворяющая следующим свойствам:\
+    
+    \begin{itemize}
+        \item $r\cdot(a+b)=r\cdot a+r\cdot b$;
+        \item $(r+s)\cdot a=r\cdot a+s\cdot b$;
+        \item $(rs)\cdot a=r\cdot(s\cdot a)$;
+        \item (если $R$ - кольцо с 1) $1\cdot a=a$.
+    \end{itemize}
+
+    Аналогично определяется \textit{правый $R$-модуль}, только там всё с другой стороны.
+\end{defn}
+
+\begin{defn}
+    Пусть $M, N$ - $R$-модули. \textit{Прямая сумма $R$-модулей} - $R$-модуль $M\oplus$ с носителем $M\times N$ и покомпонентными операциями:
+    \[
+        r\cdot (m,n):=(r\cdot m, r\cdot n), (m_1, n_1)+(m_2, n_2):=(m_1+n_1, m_2+n_2).
+    \]
+    Все свойства $R$-модуля выполняются покоординатно, значит, выполняются.
+\end{defn}
+
+\begin{defn}
+    Пусть $M$ и $N$ - левые $R$-модули. Отображение $\varphi: M\rightarrow N$ между ними, которое сохраняет операции:
+    \[
+        \varphi(rm)=r\varphi(m) \text{ и } \varphi(m_1+m_1)=\varphi(m_1)+\varphi(m_2), 
+    \]
+    называется \textit{гомоморфизмом модулей} или \hypertarget{n48}{\textcolor{red}{\textit{линейным отображением}}}.
+\end{defn}
+
+\begin{defn}
+    Обозначим за $\{m_i\}$ произвольные элементы модуля, за $\{r_i\}$ - элементы соответствующего кольца.\ 
+
+    \begin{itemize}
+        \item Уравнение 
+        \[
+            \sum_{i=1}^n m_i r_i=0
+        \]
+        называется \hypertarget{n43}{\textcolor{red}{\textit{линейной зависимостью}}}.
+        \item Линейная зависимость \textit{тривиальна}, если все $\{r_i\}$ равны нулю.
+        \item Конечный набор $m_1, \dots, m_n$ \textit{линейно независим}, если любая его линейная зависимость тривиальна.
+        \item Бесконечный набор $\{m_i\}$ линейно независим, если любой его конечный поднабор линейно независим.
+    \end{itemize}
+\end{defn}
+
+\begin{lemma}
+    Пусть $\{m_i\}_{i\in I}$ - набор элементов свободного модуля $R^{(I)}$. Любой конечный поднабор $\{m_i\}$ линейно независим тогда и только тогда, когда линейное отображение $f\mapsto \sum f(i)m_i$ инъективно.
+\end{lemma}
+
+\begin{proof}
+    Вспомним, что гомоморфизм групп инъективен тогда и только тогда, когда его ядро тривиально. Тогжа обратим внимание на определение линейной независимости и линейного отображения и поймём, что здесь сказано одно и то же.
+\end{proof}
+
+\begin{defn}
+    Набор $\{m_i\}$ называется \hypertarget{n44}{\textcolor{red}{\textit{системой образующих}}}, если линейное отображение $f\mapsto \sum f(i)m_i$ сюръективно.
+\end{defn}
+
+\begin{cons}
+    Эквивалентно, любой элемент модуля можно представить линейной комбинацией конечного поднабора $\{m_i\}$ (в нормальной жизни это называлось порождающей системой).
+\end{cons}
+
+\begin{lemma}
+    Подмножество $\{m_i\}$ модуля - линейно независимая система образующих тогда и только тогда, когда линейное отображение $f\mapsto \sum f(i)m_i$ - изоморфизм.
+\end{lemma}
+
+\begin{defn}
+    \hypertarget{n45}{\textcolor{red}{\textit{Базис}}} - линейно независимая система образующих.
+\end{defn}
+
+\begin{defn}
+    Пусть $F$ - поле. $F$-модуль называется \hypertarget{n46}{\textcolor{red}{\textit{векторным пространством}}} над $F$.
+\end{defn}
+
+\begin{theorem}
+    (О существовании базиса). Любую линейно независимую систему в векторном пространстве можно дополнить до базиса. В частности, в любом векторном пространстве есть базис.
+\end{theorem}
+
+\begin{proof}
+    Будем доказывать через лемму Цорна, рассмотрим частично упорядоченное множество $S$, носитель которого - множество линейно независимых систем, содержащих данную, а отношение порядка - включение.\ 
+
+    Рассмотрим супремум (обхединение) некоторой цепи и линейную зависимость какого-то конечного подмножества этого объединения. Каждый вектор в этой линейной зависимости лежит в некотором из элементов цепи. Всего таких векторов конечное число, а цепь по определению линейно упорядочена, поэтому мы можем выбрать наибольший элемент цепи, который содержит каждый их векторов. Этот наибольший набор по определению линейно независим, значит, вся рассматриваемая линейная комбинация тривиальна, Получается, что объединение тоже линейно независимо и содержит исходную систему.\ 
+
+    Теперь применяем лемму Цорна: в нашем линейно упорядоченном множестве $S$ существует максимальный элемент, то есть, максимальная линейно независимая система среди линейно независимых систем, содержащих данную. Но так как любая линейно назависимая система, содержащая максимальную систему, содержит и данную, то максимальная система будет максимальной линейно независимой среди всех линейно независимых систем. По одной из переформулировок это и есть базис (мы их, конечно, не привели, но нетрудно догадаться, что базис это минимальная по включению система образующих или максимальная по включению линейно независимая система).
+\end{proof}
+
+\resetall
+
 \subsection{Размерность векторного пространства}
+
+\begin{defn}
+    \hypertarget{n47}{\textcolor{red}{\textit{Размерность}}} $\dim V$ векторного пространства $V$ - мощность его базиса.
+\end{defn}
+
+Далее мы докажем, что все бащисы векторного пространства равномощны, тем самым определение будет корректно.\\
+
+\begin{theorem}
+    Все базисы одного векторного пространства равномощны.
+\end{theorem}
+
+\begin{proof}
+    1 случай (конечный). Рассмотрим два конечный базиса $V$: $\{v_1, \dots, v_n\}$ и $\{u_1, \dots , u_m\}$. Представим $v_n$ в виде $v_n=\sum_{i=1}^mu_i\alpha_i, \alpha_i\in F$, причём не все $\alpha_i$ равны нулю, так как иначе $v_n=0$ - нетривиальная линейная зависимость первого набора. Не умаляя общности, пусть $\alpha_m\neq 0$. Тогда $v_n\alpha_m^{-1}=u_m+\sum_{i=1}^{m-1}u_i\alpha_i\alpha_m^{-1}$. Заменим в первом базиче $v_n$ на $v_n\alpha_m^{-1}$, и первый базис останется базисом (понятно, что они опять-таки всё порождают, поделим изначальный коэффициент того или иного разложения на $\alpha_m^{-1}$. аналогично, они линейно независимы, так как можно поделить последний коэффициент). Во втором базисе заменим $u_m$ на $u_m+\sum_{i=1}^{m-1}u_i\alpha_i\alpha_m^{-1}$, и второй базис также останется базисом, покажем это. \ 
+
+    Предположим, что полученный набор линейно зависим, то есть, $\sum_i=1^{m-1}u_i\beta_i+(u_m+\sum_{i=1}^{m-1})\beta_m=0$ - некоторая нетривиальная линейная зависимость нового набора. $\beta_m\neq 0$, так как иначе существовала бы нетривиальная зависимость набора $\{u_1, \dots, u_{m-1}\}$. Раскроем скобки, приведём подобные, получим некоторую линейную линейную зависимость изначального второго набора, причём нетривиальную, так как коэффициент при $u_m$ будет равен $\beta_m$, то есть, будет ненулевым. Противоречие с тем, что изначальный второй набор - базис. Значит, полученный набор линейно независим. Аналогично, полученный набор - система образующих, а значит, базис. Таким образом, мы получили два базиса, у которых хотя бы один элемент общий. Так будем преобразовывать бащисы, увеличивая количество общих элементов. В конце концов окажется, что один базис содержится в другом, а тогда они совпадают, так как базис - минимальная по включению система образующих. При этом на каждом шаге мы меняли только по вектору из каждого бащиса, а количество векторов в базичах не меняли. Значит, изначальные базисы равномощны.\ 
+
+    2 случай (бесконечный). Пусть $u=\{u_i\}_{i\in I}, v=\{v_j\}_{j\in J}$ - базисы, причём $\vert I\vert >\vert J\vert $ и $\vert I\vert$ бесконечна. Выразим элементы $u$ через $v:u_i=\sum_{j\in J_i}v_j\alpha_j, \vert J_i\vert<\infty$. Рассмотрим отображение из $I$ в множество конечных подмножеств $J$, которое мы обозначаим как $J'$, действующее по правилу $i\mapsto J_i$. Воспользуемся утверждением, доказанным в курсе теории множеств: если $J$ конечно, то $\vert J'\vert=2^{\vert J\vert}$, то есть, $J'$ конечно, иначе $\vert J'\vert=\vert J\vert$. С исходным неравенством это становится $\vert I\vert>\vert J'\vert$ (если $J$ конечно: то неравенство верно, так как $I$ бесконечно, а $J'$ конечно: иначе $\vert I\vert > \vert J\vert = \vert J'\vert$). \ 
+
+    Рассмотрим конечное подмножество $K$ индексов второго базиса и посчитаем число его прообразов в первом базисе при отображении $i\mapsto J_i$. Векторов, которые переходят в $K$, не может быть больше $\vert K\vert $, поскольку в ином случае, в пространстве, которо порождено векторами $K$, нашлась бы ли линейно независимая система из $\vert K\vert +1$ векторов (любое подмножество базиса $u$ линейно независимо), а это невозможно по рассуждению для конечного случая. Значит, у $K$ конечное число прообразов в $I$. \ 
+
+    Таким образом, опять же по теоретико-множественным соображениям, либо $J'$ конечно, и, следовательно, $I$ тоже конечно, как объединение конечного числа конечных множеств, либо $J'$ бесконечно, и, следовательно, $\vert I\vert = \vert J\vert = \vert J'\vert$, так как $I$ - объединение $\vert J\vert$  множеств конечной мощности каждое.\ 
+
+    Так или иначе, мы получили противоречие с изначальными условиями на $I$ и $J$.
+\end{proof}
+
+\begin{cons}
+    Любое векторное пространство $V$ над $F$ изоморфно свободнуму модулю $ F^{(I)}$, причём $\vert I\vert$ определена однозначно.
+\end{cons}
+
+Теперь изначальное определение корректно.
+
+\resetall
 
 \subsection{Линейные отображения векторных пространств. Подпространство, фактор-пространство. Ранг линейного отображения}
 
+Определение \hyperlink{n48}{линейного отображения} мы уже упоминали в прошлом билете. И тем не менее, сначала опять несколько определений, которые нужны для понимания того, что происходит в самом билете.
+
+\begin{defn}
+    Подмножество модуля, которое само является модулем над тем же кольцом и замкнуто относительно всех операций, называется \hypertarget{n49}{\textcolor{red}{\textit{подмодулем}}}.
+\end{defn}
+
+\begin{defn}
+    Пусть $M$ - левый $R$-модуль, $N$ - подмодуль. \hypertarget{n50}{\textcolor{red}{\textit{Фактормодулем}}} $R/N$ называется фактор $R$ по отношению эквивалентности 
+    \[
+        a\equiv b \Longleftrightarrow a-b\in N
+    \]
+    с определёнными на нём операциями
+    \[
+        [a]+[b]:=[a+b], r\cdot[a]:=[ra].
+    \]
+\end{defn}
+
+Нетрудно теперь заменить несколько слов и понять, что такое подпространство и фактор-пространство. 
+
+\begin{defn}
+    \hypertarget{n51}{\textcolor{red}{\textit{Коразмерность}}} $\codim_V U$ подпространства $U\leq V$ равна $\dim V/U$.
+\end{defn}
+
+\begin{defn}
+    Пусть $U\leq V$ - векторные пространства. Тогда \hypertarget{n52}{\textcolor{red}{\textit{относительный базис}}} - дополнение какого-то базиса $U$ до базиса $V$.
+\end{defn}
+
+Теперь можно немного подробнее поговорить о линейных отображениях именно векторных пространств.\\ 
+
+Пусть $f:V\rightarrow W$ - линейное. Скажем, что ядро есть $U\leq V$, тогда найдём относительный базис $\{v_i\}_{i\in I}$. Тогда $f$ определяется своими значениями именно на этом относительном базисе. Значения $\{f(v_i)\}_{i\in I}$ внутри $W$ должны быть линейно независимы, иначе:
+\[
+    \sum_i f(v_i)\alpha_i=0 \Leftrightarrow f(\sum_i v_i\alpha_i)=0, \text{ но тогда }\sum_i v_i\alpha_i\in \Ker f=U,
+\]
+а затем $\{f(v_i)\}_{i\in I}$ дополняется до базиса в $W$. То есть, базис $V$ разбивается на две части: одна зануляется, другая во что-то переходит и как-то дополняется в $W$ до базиса там.
+
+\begin{defn}
+    Пусть $f$ - линейное отображение векторных пространств. Тогда размерность образа $f$ называется \hypertarget{n53}{\textcolor{red}{\textit{рангом}}} $f$ и обозначается 
+    \[
+        \rank f:=\dim \Imf f=\codim \Ker f.
+    \]
+    (на более простом языке - это количество единичных столбцов в матрице преобразования, написанной для правильных базисов).
+\end{defn}
+
+\resetall
+
 \subsection{Матрица линейного отображения. Композиция линейных отображений и произведение матриц. Кольцо матриц}
+
+Матрица линейного отображения $F^n\rightarrow F^m$ будет выглядеть так: $n$ столбцов высоты $m$, где каждый столбец - образ какого-то элемента базиса первого пространства (то есть, его разложение в базис второго пространства по строчкам).\\
+
+Пусть у нас имеется композиция линейных отображений $b\circ a, a:F^n\rightarrow F^m, b: F^m \rightarrow F^p$. Пусть $\{e_j\}$ - базис первого, $\{f_i\}$ - базис второго, $\{g_k\}$ - базис третьего. Тогда
+\[
+    a(e_j)=\sum_{i=1}^m f_i a_{ij},
+\]
+где $a_{ij}$ - матричные коэффициенты на пересечении $i$-ой строки и $j$-го столбца. Аналогично задаём образ второго базиса:
+\[
+    b(f_i)=\sum_{k=1}^p g_k b_{ki}.
+\]
+Тогда мы можем найти $b\circ a$:
+\[
+    (b\circ a)(e_j)=b(\sum_{i=1}^m f_i a_{ij})=\sum_{i=1}^m b(f_i)a_{ij}=\sum_{i=1}^m\sum_{k=1}^p g_k b_{ki}a_{ij}.
+\]
+Конечно, знаки суммирования можно переставить. И что всё это означает? Это означает, что если мы хотим найти матричный коэффициент композиции, то нужно рассмотреть сумму:
+\[
+    (b\circ a)_{kj}=\sum_{i=1}^m b_{ki}a_{ij}.
+\]
+То есть, количество строк матрицы преобразования $a$ должно совпасть с количеством столбцов матрицы преобразования $b$.\\
+
+Отсюда видно, что квадратные матрицы образуют кольцо (причём некоммутативное при размерности большей 1). Сложение в этом кольце определено покоординатно, умножение мы задали, остаётся только проверить свойства, проверяется это покоординатно.
+
+\resetall
 
 \subsection{Элементарные преобразования. Метод Гаусса. Системы линейных уравнений}
 
+Предупреждение: в билете происходит словесный понос, так как в начале, по традиции, немного ''предыстории'', а затем идёт описание сюжета, зачем и почему мы получаем элементарные преобразования и другие объекты, а также, самый сок: метод Гаусса и решение СЛУ. Так что, при ответе на билет можете ''выжать'' важную информацию отсюда, которая обозначена красными определениями, а также, небольшую часть общего рассуждения.\\
+
+Для начала рассмотрим \hypertarget{n54}{\textcolor{red}{\textit{замену базиса}}}, которую вряд ли можно назвать элементарным преобразованием, но тем не менее. Когда мы совершаем линейное отображение, важно, какой базис мы выбрали, потому что от этого зависит, как будет выглядеть матрица отображения. Однако давайте заметим, что базис можно поменять посредством тождественного преобразования из векторного пространства в себя, которое записывается \textit{квадратной матрицей}, в которой каждый ноэлемент одного базиса расписан через элементы второго. Тогда чтобы найти, как выглядит матрица преобразования в другом базисе, нужно умножить матрицу преобразования базиса на матрицу отображения. Также можно заменить базис получившегося пространства, но по сути, это то же самое, только умножаем мы с другой стороны.\
+
+\begin{defn}
+    Такая матрица смены базиса называется \hypertarget{n55}{\textcolor{red}{\textit{матрицей перехода}}}.
+\end{defn}
+
+\begin{defn}
+    \textit{Ранг} матрицы отображения, конечно, не превосходит длин сторон матрицы (лучше рассматривать всё это в правильных базисах (с единичками)), то есть, $r\leq \min(n, m)$, а если $r=\min(m,n)$, то отображение будет называться отображением \hypertarget{n57}{\textcolor{red}{\textit{полного ранга}}}.
+\end{defn}
+
+Для того, чтобы определить метод Гаусса, обратимся к такой задаче:
+
+\begin{exl}
+    Дана матрица $m\times n$ ($m$ строк, $n$ столбцов), необходимо найти все обратимые матрицы $m\times m$ и $n\times n$ (то есть, такие, что в произведении они дадут следующую матрицу).
+\end{exl}
+
+\begin{equation*}
+    \begin{pmatrix}
+        1 & 0 & \cdots & 0 & 0 & \cdots & 0 \\
+        0 & 1 & \cdots & 0 & 0 & \cdots & 0 \\
+        \vdots & \vdots & \ddots & \vdots & \vdots & \cdots & \vdots \\
+        0 & 0 & \cdots & 1 & 0 & \cdots & 0 \\
+        0 & 0 & \cdots & 0 & 0 & \cdots & 0 \\
+        \vdots & \vdots & \vdots & \vdots & \vdots & \ddots & \vdots \\
+        0 & 0 & \cdots & 0 & 0 & \cdots & 0
+    \end{pmatrix}
+\end{equation*}\
+
+То есть, она диагональная до какого-то момента, а потом всё - нули (и, конечно, она не обязательно квадратная). В общем и целом, мы сейчас будем искать набор каких-то заведомо обратимых матриц. \
+
+\begin{defn}
+    \hypertarget{n58}{\textcolor{red}{\textit{Трансвекция}}} (или элементарное преобразование первого рода) - квадратная матрица, полученная из единичной путём добавления на $ij$-ую позицию какого-то элемента $\xi$, записывается это так: $t_{ij}(\xi)$ - трансвекция.
+\end{defn}
+
+\begin{cons}
+    Трансвекции обратимы: $t_{ij}(\xi)\times t_{ig}(-\xi)=I$ (кстати, вообще, $t_{ij}(\alpha)\times t_{ig}(\beta)=t_{ig}(\alpha+\beta))$, единичная матрица (кстати, тоже трансвекция, только от нуля).
+\end{cons}
+
+\begin{cons} Что же вообще они дают? \
+    \begin{itemize}
+    \item Умножение матрицы \textit{слева} на $t_{ij}(\xi)$, прибавляет к $i$-ой строчке $j$-ую строчку, домноженную на $\xi$ (слева);
+    \item Умножение матрицы \textit{справа} на $t_{ij}(\xi)$, прибавляет к $j$-му столбцу $i$-ый столбец, домноженный на $\xi$ (справа).
+    \end{itemize}
+\end{cons}
+
+Далее для удобства будем рассматривать только умножение слева на произведение трансвекций. И давайте поймём, как можно переставлять строчки в матрице. Если мы хотим переставить строчки $i, j$, то нужно выполнить умножение на таукю матрицу:
+
+\begin{equation*}
+    \begin{pmatrix}
+        1 & 0 & \cdots & 0 & \cdots & 0 & \cdots & 0 \\
+        0 & 1 & \cdots & 0 & \cdots & 0 & \cdots & 0 \\
+        \vdots & \vdots & \ddots & \vdots & \vdots & \vdots & \cdots & \vdots \\
+        0 & 0 & \cdots & 0 & \cdots & 1 & \cdots & 0 \\
+        \vdots & \vdots & \vdots & \vdots & \ddots & \vdots & \cdots & \vdots \\
+        0 & 0 & \cdots & 1 & \cdots & 0 & \cdots & 0 \\
+        \vdots & \vdots & \vdots & \vdots & \vdots & \vdots & \ddots & \vdots \\
+        0 & 0 & \cdots & 0 & \cdots & 0 & \cdots & 1
+    \end{pmatrix}
+\end{equation*}\
+
+Где просто в прямоугольничке, образованном $i, j$ строками и столбцами мы переставили 0 и 1 в углах. Если умножит матрицу на такую слева, то мы как раз переставим $i, j$ - строки (если справа, то, конечно, столбцы). Но такую матрицу получить невозможно. А возможно такую: 
+
+\begin{equation*}
+    \begin{pmatrix}
+        1 & 0 & \cdots & 0 & \cdots & 0 & \cdots & 0 \\
+        0 & 1 & \cdots & 0 & \cdots & 0 & \cdots & 0 \\
+        \vdots & \vdots & \ddots & \vdots & \vdots & \vdots & \cdots & \vdots \\
+        0 & 0 & \cdots & 0 & \cdots & 1 & \cdots & 0 \\
+        \vdots & \vdots & \vdots & \vdots & \ddots & \vdots & \cdots & \vdots \\
+        0 & 0 & \cdots & -1 & \cdots & 0 & \cdots & 0 \\
+        \vdots & \vdots & \vdots & \vdots & \vdots & \vdots & \ddots & \vdots \\
+        0 & 0 & \cdots & 0 & \cdots & 0 & \cdots & 1
+    \end{pmatrix}
+\end{equation*}\
+
+Но тогду у новой $j$-ой строчки мы поменяем знак. Делаем мы это при помощи трансвекций таким образом: $(u,v)\rightarrow (u+v, v)\rightarrow (u+v, -u)\rightarrow (v, -u)$, где $u, v$ мы обозначили строчки. Тогда даже можно выразить явную формулу: $t_{ij}(1)\times t_{ij}(-1)\times t_{ij}(1)$.\ 
+
+\begin{defn}
+    \hypertarget{n59}{\textcolor{red}{\textit{Псевдоотражение}}} ($\text{di}_i(\varepsilon)$) - преобразование (элементарное второго рода), которое представляется в виде матрицы, у которой на пересечении $i$-ой строки и столбца стоит не $1$, а $\varepsilon$. Описывает она домножение строки (или столбца, в зависимости от того, с какой стороны умножаем), на $\varepsilon$. Однако получить её путём умножения трансвекций мы не можем. Также $\varepsilon \in R^\times$, то есть, в поле не равен нулю.
+\end{defn}
+
+Однако, мы можем при помощи трансвекций получить достаточно похожую матрицу:
+
+\begin{equation*}
+    \begin{pmatrix}
+        1 & 0 & \cdots & 0 & \cdots & 0 & \cdots & 0 \\
+        0 & 1 & \cdots & 0 & \cdots & 0 & \cdots & 0 \\
+        \vdots & \vdots & \ddots & \vdots & \vdots & \vdots & \cdots & \vdots \\
+        0 & 0 & \cdots & \varepsilon & \cdots & 0 & \cdots & 0 \\
+        \vdots & \vdots & \vdots & \vdots & \ddots & \vdots & \cdots & \vdots \\
+        0 & 0 & \cdots & 0 & \cdots & \varepsilon^{-1} & \cdots & 0 \\
+        \vdots & \vdots & \vdots & \vdots & \vdots & \vdots & \ddots & \vdots \\
+        0 & 0 & \cdots & 0 & \cdots & 0 & \cdots & 1
+    \end{pmatrix}
+\end{equation*}\
+
+Которая на диагонали содержит взаимно обратную ''пару'' к элементу, который мы размещаем. Такую матрицу можно получить произведением шести трансвекций, всё это можно проделать на матрицах размерности $2$. Тогда при умножении матрицы на данную, мы $i$-ую строчку умножим на $\varepsilon$, а $j$-ую на него поделим.\ 
+
+Итого, у нас есть определённый набор операций (которые мы можем получить из произведения трансвекций). Или же, \hypertarget{n60}{\textcolor{red}{\textit{элементарные преобразования}}}: \
+
+\begin{itemize}
+    \item прибавить к строчке какую-то другую с коэффициентом;
+    \item переставить две строчки (у одной из них изменится знак);
+    \item умножить одну строчку на элемент, но другую на него поделить.
+\end{itemize}
+
+Теперь мы этими операциями будем приводить матрицу \hypertarget{n61}{\textcolor{red}{\textit{методом Гаусса}}} (сведение к ступенчатому виду).\ 
+
+Будем приводить матрицу к \textit{эшелонированному виду}. Рекомендуется заглянуть в лекцию №19, потому что всё же, я не нарисую все картинки с доски, а ограничусь только краткими словесными рассуждениями. \ 
+
+Для начала умножаем только слева на трансвекции (работаем только со строками). Рассмотрим первый (слева направо) ненулевой столбец, поменяем строчки местами так, чтобы в первой строке в этом столбце стоял не нуль. Теперь успешно повычитаем первую строку с коэффициентом из остальных так, чтобы уничтожить все остальные ненулевые элементы в первом столбце. Теперь рассмотрим матрицу без первых нулевых и этого столбца, а также верхней строки. Проделаем для неё ту же самую операцию, и так далее много раз. В итоге либо ''упрёмся в стенку'', либо снизу останутся нулевые строки. Теперь все \hypertarget{n62}{\textcolor{red}{\textit{ведущие}}} элементы (которые мы оставляли сверху в столцах, и количество которых, кстати, равно рангу матрицы), поочерёдно будем превращать в единицы, путём деления одного на себя, и умножая на него следующий. Если снизу остались нулевые строки, то в единичку мы можем превратить и последний ведущий элемент, иначе это невозможно.\ 
+
+Теперь вспоминаем, что мы ещё умеем умножать на трансвекции справа, и уничтожим всё в строках, кроме ведущих. И, наконец, переставим их последовательно (у последнего ведущего опять же может остаться знак ''-'', но с этим ничего не поделаешь, это инвариант матрицы, который называется \textit{определителем}, однако сейчас не об этом). То есть, если матрица не квадратная матрица, то мы всегда можем выстроить по диагонали единицы, а в случае квадратной матрицы, в последней позиции диагонали мы можем получить не $1$, а некоторый другой элемент.\\
+
+Наконец, \hypertarget{n63}{\textcolor{red}{\textit{системы линейных уравнений}}} - система вида:
+
+\begin{equation*}
+    \begin{cases}
+        a_{11}x_1+\dots+a_{1n}x_n=b_1\\
+        \cdots \\
+        a_{m1}x_1+\dots+a_{mn}x_n=b_m
+    \end{cases}
+\end{equation*}\
+
+Где $a_{ij}$ и $b_i$ - какие-то элементы поля, я $x_j$ - переменные, значения которых мы хотим выяснить.\ 
+
+Скажем, что у нас есть несколько матриц:
+
+\begin{equation*}
+    A = 
+    \begin{pmatrix}
+        a_{11} & \cdots & a_{1n} \\
+        \vdots & \ddots & \vdots \\
+        a_{m1} & \cdots & a_{mn}
+    \end{pmatrix},
+    x=
+    \begin{pmatrix}
+        x_1 \\
+        \vdots \\
+        x_n
+    \end{pmatrix},
+    b=
+    \begin{pmatrix}
+        b_1 \\
+        \vdots \\
+        b_m
+    \end{pmatrix}
+\end{equation*}\
+
+Они есть $A: F^n\rightarrow F^m, x\in F^n, b\in F^m$.\ 
+
+Бывает, конечно, два случая: либо решений нет, либо решение есть. Если решение есть, то мы можем из него получить и все остальные, путём прибавления элементов из ядра $A$. Но тогда нужно как-то решить уравнение $Ax=0$, что не сильно-то легче, чем решить изначальное уравнение $Ax=b$. Кстати, здесь можно также заметить, что решение системы существует тогда и только тогда, когда $b\in \Imf A$. Теперь в ходе рассуждений можно упомянуть следующую лемму, которой, конечно, в билетах нет:\\
+
+\begin{lemma}
+    (Размеронсти ядра и образа). Пусть $f: V\rightarrow V'$ - линейное отображение векторных пространств. Тогда
+    \[
+        \dim V = \dim \Imf f +\dim \Ker f
+    \]
+\end{lemma}
+
+А так как ранг есть размерность образа, то $\dim \Ker A = n - \rank A$. Но вообще, это не очень-то и важно, а просто как вспомогательный факт. Нам же нужно научиться понимать, есть ли решения у системы, и, если есть, то как их находить.\ 
+
+Если у нас имеется $Ax=b$, то можно домножить это уравнение на некую квадратную матрицу $P \Rightarrow PAx=Pb$, где $P$ - обратимая матрица, чтобы не потерять никакой информации, то есть, она выражается через трансвекции. Так как мы умножаем слева, то по сути, мы решаем систему ''школьным методом'' - комбинирование строк. Приводим матрицу к ступенчатому виду, причём лучше сразу привести матрицу к \hypertarget{n64}{\textcolor{red}{\textit{расширенному виду}}}, то есть, к матрице $A$ приписать справа столбец $b$ и производить все операции сразу на такой расширенной матрице. Тогда если мы получили, что в части только с $А$ есть нулевые строчки, которые равны каким-то ненулевым значениям в столбце $b$, то мы получили противоречие, решений нет. Иначе рассмотрим последнюю ненулевыю строку, для всех переменных кроме одной выберем произвольные значения (параметры), а последнее будет задано тогда однозначно. И так дальше будем подниматься по строчкам, получим решение всей системы.\\
+
+Перед тем, как дорешать систему, мы пришли как раз к теореме Кронекера-Капелли, так как как раз количество ведущих элементов равно рангу, и если в матрице $A$ и в матрице расширенной количество ведущих совпадает, то и противоречия с последними ненулевыми строками не будет. Иначе, оно появляется, и только в таком случае система решений не имеет.
+
+\resetall
+
 \subsection{Теорема Кронекера-Капелли}
+
+\begin{theorem}
+    (\hypertarget{n65}{\textcolor{red}{\textit{Теорема Кронекера-Капелли}}}). Система линейных уравнений имеет решение тогда и только тогда, когда ранг исходной матрицы равен рангу расширенной матрицы.
+\end{theorem}\
+
+Все рассуждения см. начиная с \hyperlink{n54}{системы линейных уравнений} в предыдущем билете.
+
+\resetall
 
 \subsection{Определение группы. Циклическая группа. Порядок элемента}
 
@@ -1237,15 +1606,25 @@ $z^n=e^{i\varphi n}=\cos(\varphi n)+i\sin(\varphi n)$. Распишем $c=s(\co
     Быстрый список для особо заебавшегося поиска.
     ]
 
+    \hyperlink{n42}{$R$-модуль}\
+    
     \hyperlink{n39}{алгебраическая замкнутость}\
     
     \hyperlink{n4}{ассоциированность}\
+
+    \hyperlink{n45}{базис}
+
+    \hyperlink{n61}{ведущие элементы}\
+
+    \hyperlink{n46}{векторное пространство}\
 
     \hyperlink{n19}{гомоморфизм}\
     
     \hyperlink{n3}{делитель нуля}\
 
     \hyperlink{n5}{евклидово кольцо}\
+
+    \hyperlink{n54}{замена базиса}\
 
     \hyperlink{n9}{идеал}\
 
@@ -1261,9 +1640,19 @@ $z^n=e^{i\varphi n}=\cos(\varphi n)+i\sin(\varphi n)$. Распишем $c=s(\co
 
     \hyperlink{n28}{кольцо многочленов}\
 
+    \hyperlink{n51}{коразмерность}\
+
     \hyperlink{n15}{КТО}\
 
     \hyperlink{n31}{лемма Гаусса}\
+
+    \hyperlink{n43}{линейная зависимость}\
+
+    \hyperlink{n48}{линейное отображение}\
+
+    \hyperlink{n55}{матрица перехода}\
+
+    \hyperlink{n60}{метод Гаусса}\
 
     \hyperlink{n27}{многочлен}\
 
@@ -1279,7 +1668,11 @@ $z^n=e^{i\varphi n}=\cos(\varphi n)+i\sin(\varphi n)$. Распишем $c=s(\co
 
     \hyperlink{n40}{ОТАл}\
 
+    \hyperlink{n52}{относительный базис}\
+
     \hyperlink{n2}{область целостности}\
+
+    \hyperlink{n49}{подмодуль}\
 
     \hyperlink{n16}{поле}\
 
@@ -1289,9 +1682,23 @@ $z^n=e^{i\varphi n}=\cos(\varphi n)+i\sin(\varphi n)$. Распишем $c=s(\co
 
     \hyperlink{n18}{поле частных}\
 
+    \hyperlink{n56}{полный ранг}\
+
     \hyperlink{n8}{простые}\ 
 
+    \hyperlink{n58}{псевдоотражение}\
+
     \hyperlink{n41}{разложение рациональных ф-й}\
+
+    \hyperlink{n47}{размерность}\
+
+    \hyperlink{n53}{ранг отображения}\
+
+    \hyperlink{n63}{расширенный вид матрицы}\
+
+    \hyperlink{n44}{система образующих}\
+
+    \hyperlink{n62}{СЛУ}\
 
     \hyperlink{n30}{содержание}\
 
@@ -1303,7 +1710,11 @@ $z^n=e^{i\varphi n}=\cos(\varphi n)+i\sin(\varphi n)$. Распишем $c=s(\co
 
     \hyperlink{n32}{теорема Гаусса}\
 
+    \hyperlink{n64}{теорема Кроненера-Капелли}\
+
     \hyperlink{n25}{теорема о гомоморфизме}\
+
+    \hyperlink{n57}{трансвекция}\
 
     \hyperlink{n33}{универсальное св-во кольца мн-ч}\
 
@@ -1311,9 +1722,13 @@ $z^n=e^{i\varphi n}=\cos(\varphi n)+i\sin(\varphi n)$. Распишем $c=s(\co
 
     \hyperlink{n11}{УОВЦГИ}\
 
+    \hyperlink{n50}{фактормодуль}\
+
     \hyperlink{n12}{факториальность}\
 
     \hyperlink{n24}{фактор-кольцо}\
+
+    \hyperlink{n59}{элементарные преобразования}\
 
     \hyperlink{n20}{ядро}\
     
